--- a/home/index.htm
+++ b/home/index.htm
@@ -35,11 +35,18 @@
 <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter. -->
     <h1 class="title">for Cross-Disciplinary Collaboration on City Models</h1>
-    <i style="font-weight: 525; font-family: 'Times New Roman', Times, serif;"><p>The goal of this project is to assist in bringing about a culture where people interested in representing buildings, street-scapes and neighborhoods as they are, as they were, as they might be or might-have-been, can easily share and re-use their work with each-other and with historians of the future.  
+    <i style="font-weight: 525; font-family: 'Times New Roman', Times, serif;"><p>The goal of this project is to assist in bringing about a culture where people interested in representing buildings, streetscapes and neighborhoods as they are, as they were, as they might be or might-have-been, can easily share and re-use their work with each-other and with historians of the future.  
     </p><p>This problem has not already been solved because there are a lot of contributors and diverse tools involved in creating a city model.  There are difficulties exchanging data between detailed 3D design tools and scalable geographical information systems.  The solutions to these problems are beyond the scope of the day-to-day work of municipalities, campus administrations and architecture firms.   Several years of working with municipalities and designers and archival systems have led us to simple solutions that fulfil the principles of the ISO Reference Model for Open Archival Systems.  
     <p>We hope that organizations interested in platform-independent digital asset management will find it expedient to adopt these free templates and tools.  As a side effect, we may enjoy easier sharing of city model assets between agencies and applications.  Fragmentary city modeling activities may begin to merge together. In this more fertile ecosystem of resources will support re-use of knowledge in city-modeling applications that has not been practical before -- including historical research and mobile augmented reality apps.  
     </p>  </i>
-      
+    
+    <p style="background-color: yellow"><b>Update:  CitySchema Now implemented in Municipalities of Boston and Cambridge!</b></p>
+      <ul>
+        <li><a href="https://www.bostonplans.org/3d-data-maps/3d-smart-model/citywide-3d-model" target="sidecar">Fly Through Boston Model in ArcGIS On-Line.
+        <li><a href="https://www.bostonplans.org/3d-data-maps/3d-smart-model/3d-data-download" target="sidecar">Download Boston Model in Open Formats</a>
+        <li><a href="https://www.cambridgema.gov/GIS/3D/citywide3dmodel" target="sidecar">Fly Through Cambridge Model in ArcGIS On-Line
+        <li><a href="https://www.cambridgema.gov/GIS/3D/3ddata/3ddatadownloadmap" target="sidecar">Download Cambridge Model in Open Formats</a>
+        </ul>
 
     <h2>Intelligent City Models</h2>
     <p>    <p>Before digging into the technical details of <b>How</b> to manage a city-wide collection of 3D models, it will be useful to have a picture of the sorts of people for whom this scheme has been designed, and the personal and institutional <b>motivations</b> that make this effort worthwhile.  
