modified:   home/index.htm

--- a/home/index.htm
+++ b/home/index.htm
@@ -46,6 +46,7 @@
         <li><a href="https://www.bostonplans.org/3d-data-maps/3d-smart-model/3d-data-download" target="sidecar">Download Boston Model in Open Formats</a>
         <li><a href="https://www.cambridgema.gov/GIS/3D/citywide3dmodel" target="sidecar">Fly Through Cambridge Model in ArcGIS On-Line
         <li><a href="https://www.cambridgema.gov/GIS/3D/3ddata/3ddatadownloadmap" target="sidecar">Download Cambridge Model in Open Formats</a>
+        <li><a href="http://www.pbcgis.com/presentations/pbcote_cga_geotemporal_20230714.pdf" target="outboard">Explore the most recent presentation</a> presented at Harvard Center for Geographic Analysis. July 15-16, 2023.
         </ul>
 
     <h2>Intelligent City Models</h2>
