new file:   tile_scheme/Bos3d_TileGrid/Bos3D_TileGrid_MetroShift_Feet_dxf.zip 	new file:   tile_scheme/Bos3d_TileGrid/Bos3d_TileGrid.json 	new file:   tile_scheme/Bos3d_TileGrid/Bos3d_TileGrid_JSON.zip 	new file:   tile_scheme/Bos3d_TileGrid/Bos3d_TileGrid_Reference_jpg.zip 	new file:   tile_scheme/Bos3d_TileGrid/Bos3d_TileGrid_StPlane_Unshift_Feet_dxf.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3D_Boston_CRS.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3D_TileGrid_SKP.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3d_TileGrid_CSV.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3d_TileGrid_OBJ.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3d_TileGrid_SHP.zip 	new file:   tile_scheme/Bos3d_TileGrid/Metro3d_TileMapBackground_jpg.zip 	new file:   tile_scheme/Bos3d_TileGrid/MetroTileGrid_Reference_NoText_jpg.zip 	new file:   tile_scheme/Bos3d_TileGrid/metadata/Bos3d_TileGrid.pdf 	modified:   tile_scheme/index.htm

--- a/tile_scheme/index.htm
+++ b/tile_scheme/index.htm
@@ -100,14 +100,14 @@ To facilitate on-going exchange of 3D models, we have chosen a default offset th
 
 <h2 id="download">Download Tile Grid Resources</h2>
 <ul>
-<li><a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Metro_Boston_3D_CRS.zip">ArcGIS Projection file for Metro 3D Boston coordinate system.</a> 
-<li>Tile reference image in <a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Bos3d_TileGrid_OBJ.zip">.OBJ format</a> or <a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Bos3d_TileGrid_Reference.jpg">JPEG</a>.
+<li><a href="./Bos3d_TileGrid/Metro3D_Boston_CRS.zip">ArcGIS Projection file for Metro 3D Boston coordinate system.</a> 
+<li>Tile reference image in <a href="./Bos3d_TileGrid/Metro3d_TileGrid_OBJ.zip">.OBJ format</a> or <a href="./Bos3d_TIleGrid/Metro3d_TileMapBackground_jpg.zip">JPEG (with georefeencing)</a>.
 <li>Tile Polygons and Points (including insertion-point and bounding rectangle)
 
-<ul><li><a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Metro3D_TileGrid_SKP.zip">SketchUp format.</a> 
-    <li><a href="https://cityschema.github.io/repository-catalog/Metro3D_TileScheme_Shifted_State_Plane_DXF.zip">DXF format Metro Boston 3D coordinate system</a> or <a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Metro3D_TileScheme_Unshifted_State_Plane_DXF.zip" >Un-shifted State Plane Feet</a> -- useful for registering data layers from unshifted State-Plane data-sets. 
-    <li><a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Bos3d_TileGrid_Shapefiles.zip">Shapefile format</a>. useful for clipping ground plan images or vector data to precisely register with tiled models. 
-    <li><a href="https://cityschema.github.io/repository-catalog/Bos3d_CityWide_Data/Bos3d_TIleGrid/Bos3d_TileGrid.json.zip">GeoJSON format</a>. Helpful for automating processes that involve coordinate transformation of tiled models (see Data Dictionary, below.
+<ul><li><a href="./Bos3d_TileGrid/Metro3D_TileGrid_SKP.zip">SketchUp format.</a> 
+    <li><a href="./Bos3d_TileGrid/Bos3D_TileGrid_MetroShift_Feet_dxf.zip">DXF format Metro Boston 3D coordinate system</a> or <a href="./Bos3d_TileGrid/Bos3d_TileGrid_StPlane_Unshift_Feet_dxf.zip" >Un-shifted State Plane Feet</a> -- useful for registering data layers from unshifted State-Plane data-sets. 
+    <li><a href="./Bos3d_TileGrid/Metro3d_TileGrid_SHP.zip">Shapefile format</a>. useful for clipping ground plan images or vector data to precisely register with tiled models. 
+    <li><a href="./Bos3d_TileGrid/Bos3d_TileGrid_JSON.zip">GeoJSON format</a>. Helpful for automating processes that involve coordinate transformation of tiled models (see Data Dictionary, below).
 </ul>
 
 </ul>
