modified:   tile_scheme/index.htm

--- a/tile_scheme/index.htm
+++ b/tile_scheme/index.htm
@@ -108,6 +108,7 @@ To facilitate on-going exchange of 3D models, we have chosen a default offset th
     <li><a href="./Bos3d_TileGrid/Bos3D_TileGrid_MetroShift_Feet_dxf.zip">DXF format Metro Boston 3D coordinate system</a> or <a href="./Bos3d_TileGrid/Bos3d_TileGrid_StPlane_Unshift_Feet_dxf.zip" >Un-shifted State Plane Feet</a> -- useful for registering data layers from unshifted State-Plane data-sets. 
     <li><a href="./Bos3d_TileGrid/Metro3d_TileGrid_SHP.zip">Shapefile format</a>. useful for clipping ground plan images or vector data to precisely register with tiled models. 
     <li><a href="./Bos3d_TileGrid/Bos3d_TileGrid_JSON.zip">GeoJSON format</a>. Helpful for automating processes that involve coordinate transformation of tiled models (see Data Dictionary, below).
+    <li><a href="./Bos3d_TileGrid/Metro3d_TileGrid_CSV.zip">CSV Table format</a>. Provides coordinate information for each tile center in Latitude Longitude or shifter state plane coordinates. Helpful for automating processes that involve coordinate transformation of tiled models (see Data Dictionary, below).
 </ul>
 
 </ul>
