modified:   index.htm

--- a/index.htm
+++ b/index.htm
@@ -2,5 +2,5 @@
 <!-- This page redirects any hits to the real documentation home page -->
 <meta charset="utf-8">
 <title>Redirecting to the home folder</title>
-<meta http-equiv="refresh" content="0; URL='http://www.cityschema.org/home/index.htm'">
-<link rel="canonical" href="./home/index.htm">
+<!-- meta http-equiv="refresh" content="0; URL='http://www.cityschema.github.io/home/index.htm'">
+<link rel="canonical" href="./home/index.htm"-->
