modified:   index.htm

--- a/index.htm
+++ b/index.htm
@@ -4,3 +4,4 @@
 <title>Redirecting to the home folder</title>
 <!-- meta http-equiv="refresh" content="0; URL='http://www.cityschema.github.io/home/index.htm'">
 <link rel="canonical" href="./home/index.htm"-->
+<p>Hello World</p>
