modified:   index.htm

--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,6 @@
 <!-- This page redirects any hits to the real documentation home page -->
 <meta charset="utf-8">
 <title>Redirecting to the home folder</title>
-<meta http-equiv="refresh" content="0; URL='https://www.cityschema.org/Documentation/home/index.htm'">
+<meta http-equiv="refresh" content="0; URL='https://www.cityschema.org/home/index.htm'">
 <link rel="canonical" href="./home/index.htm">
 <!-- p>Hello Worlds</p -->
